k8s/manifests/traefik/traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: default
  name: private-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "*.o.cavnet.cloud"
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.o.cavnet.cloud"
      tls:
        certificateRefs:
          - kind: Secret
            name: any.o.cavnet.cloud-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: internet
  name: public-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "*.cavnet.io"
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.cavnet.io"
      tls:
        certificateRefs:
          - kind: Secret
            # Cloudflare origin certificate for *.cavnet.io
            name: any.cavnet.io-cert
